--- a/Projeto OS/html/Cadastros/CadastroClientes.html
+++ b/Projeto OS/html/Cadastros/CadastroClientes.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cadastro de clientes</title>
-    <link rel="stylesheet" href="/STYLE/Cadastros/CadastroClientes.css">
+    <link rel="stylesheet" href="/Projeto OS/STYLE/Cadastros/CadastroClientes.css">
 </head>
 <body>
 <div class="contentCadastros">
