--- a/Projeto OS/html/Cadastros/CadastroIncluir/IncluirClientes.html
+++ b/Projeto OS/html/Cadastros/CadastroIncluir/IncluirClientes.html
@@ -77,6 +77,7 @@
 
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
 <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
+<script src="/Projeto OS/JS/addcliente.js"></script>
 </body>
 
 </html>
