--- a/Projeto OS/html/TelaDoAdm.html
+++ b/Projeto OS/html/TelaDoAdm.html
@@ -56,7 +56,7 @@
             <li class="Lista"  id="Administrador">
                 <a href="#">
                     <span class="icone"> <ion-icon id="iconeMENU"  name="wallet-sharp"></ion-icon></span>
-                    <span class="lista"> Configurações</span>
+                    <span class="lista"> Administrador</span>
                 </a>
               
             </li>
@@ -86,6 +86,8 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="/Projeto OS/JS/TelaDoAdm.js"></script>
     <script src="/Projeto OS/JS//script.js"></script>
+    <script src="/Projeto OS/JS/addcliente.js"></script>
+
     
 </body>
 
