--- a/Projeto OS/html/Cadastros/CadastroClientes.html
+++ b/Projeto OS/html/Cadastros/CadastroClientes.html
@@ -81,7 +81,7 @@
 
 <div class="ModalClientes">
     <div class="ModalAddClientes">
-        <div class="cabecalhoAddClientes"> <h3>Cadastro de Clientes</h3> <button><ion-icon name="close-circle"></ion-icon></button> </div>
+        <div class="cabecalhoAddClientes"> <h3>Cadastro de Clientes</h3> <button class="fechaModalClientes"><ion-icon name="close-circle"></ion-icon></button> </div>
 
     <main class="container">
         <form action="">
