Ajuste do modal reservas
Criei o modal e formatei o css, iniciei os ajustes no js para abrir e fechar o modal

--- a/Projeto OS/projeto/Quartos.html
+++ b/Projeto OS/projeto/Quartos.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 
-    <div class="monstro">
+    <div class="ModalQuartos">
     
     <main class="container"><h2>Cadastro de Quartos</h2>
         <form action="">
