--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tela administrador</title>
-    <link rel="stylesheet" href="/Projeto OS/STYLE/TelaDoAdm.css">
+    <link rel="stylesheet" href="Projeto OS/STYLE/TelaDoAdm.css">
   
 </head>
 
