--- a/index.html
+++ b/index.html
@@ -84,9 +84,8 @@
  
     <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
-    <script src="/Projeto OS/JS/TelaDoAdm.js"></script>
-    <script src="/Projeto OS/JS//script.js"></script>
-    <script src="/Projeto OS/JS/addcliente.js"></script>
+    <script src="Projeto OS/JS/TelaDoAdm.js"></script>
+    <script src="Projeto OS/JS/addcliente.js"></script>
 
     
 </body>
