--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
     <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
     <script src="Projeto OS/JS/TelaDoAdm.js"></script>
     <script src="Projeto OS/JS/addcliente.js"></script>
-
+        <link rel="stylesheet" href="">
     
 </body>
 
