--- a/Projeto OS/html/Cadastros/CadastroIncluir/Reservas.html
+++ b/Projeto OS/html/Cadastros/CadastroIncluir/Reservas.html
@@ -12,7 +12,7 @@
     <main class="Header">
         <div class="contentHeader">
         <div class="TituloHeader">
-            <span><ion-icon name="people-sharp"id ="iconeTitulo" ></ion-icon></span><p>Reservas </p>
+            <span><ion-icon name="key"id ="iconeTitulo" ></ion-icon></span><p>Reservas </p>
         </div>
         <div class="BtnAddReservas"> <button>+ Adicionar</button></div>
         </div>
