--- a/Projeto OS/projeto/reservas.html
+++ b/Projeto OS/projeto/reservas.html
@@ -74,7 +74,7 @@
                     <p id="valorHotel"></p>
                     <p id="valorTotal"></p>
                     <br>
-                    <input type="submit" name="submit" id="submit" value="Aceitar Reserva">
+                    <input type="submit" name="submit" id="submit" value="Aceitar Reserva" onclick="submitForm()">
                     <button type="button" onclick="calcularHotel()" class="inputUser" id="calcularDiaria">Calcular Diária</button>
             </div>
     
