--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li class="Lista"  id="Home"  >
                 <a href="#"   >
                     <span class="icone"   ><ion-icon id="iconeMENU"  name="home-sharp"></ion-icon></span>
-                    <span class="lista" > Home</span>
+                    <span class="lista" > Reservas</span>
                 </a>
             </li>
             <li class="Lista"  id="Cadastros">
@@ -46,7 +46,7 @@
             <li class="Lista"   id="Produtos">
                 <a href="#">
                     <span class="icone"> <ion-icon id="iconeMENU"  name="stats-chart-sharp"></ion-icon></ion-icon></span>
-                    <span class="lista"> Reservas </span>
+                    <span class="lista"> Quartos </span>
                     
                 </a>
                  
