Alteração do código para remoção do modal
Alteração de todo o código

--- a/Projeto OS/html/usuarios.html
+++ b/Projeto OS/html/usuarios.html
@@ -11,7 +11,7 @@
         <main class="Header">
             <div class="contentHeader">
             <div class="TituloHeader">
-                <span><ion-icon name="bed"id ="iconeTitulo" ></ion-icon></span><p>Quartos </p>
+                <span><ion-icon name="bed"id ="iconeTitulo" ></ion-icon></span><p>Usuários </p>
             </div>
             </div>
         </main>
