--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
             <li class="Lista"   id="Produtos">
                 <a href="#">
-                    <span class="icone"> <ion-icon id="iconeMENU"  name="stats-chart-sharp"></ion-icon></ion-icon></span>
+                    <span class="icone"> <ion-icon id="iconeMENU"  name="bed"></ion-icon></ion-icon></span>
                     <span class="lista"> Quartos </span>
                     
                 </a>
@@ -55,7 +55,7 @@
 
             <li class="Lista"  id="Administrador">
                 <a href="#">
-                    <span class="icone"> <ion-icon id="iconeMENU"  name="wallet-sharp"></ion-icon></span>
+                    <span class="icone"> <ion-icon id="iconeMENU"  name="person"></ion-icon></span>
                     <span class="lista"> Usuários</span>
                 </a>
               
